[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/font_res/SG-Light_24px.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/stylebox_res/MenuButtons-normal.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/stylebox_res/MenuButtons-pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://UI/font_res/MainMenu-Buttons.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/stylebox_res/MenuButtons-disabled.tres" type="StyleBox" id=6]
[ext_resource path="res://UI/icons/menu_delete.png" type="Texture" id=7]
[ext_resource path="res://UI/icons/menu_delete_hover.png" type="Texture" id=8]
[ext_resource path="res://UI/icons/menu_delete_disabled.png" type="Texture" id=9]
[ext_resource path="res://UI/icons/menu_delete_pressed.png" type="Texture" id=10]
[ext_resource path="res://UI/font_res/SG-Light_12px.tres" type="DynamicFont" id=11]

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.901961 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 100.0
margin_top = 50.0
margin_right = 1052.0
margin_bottom = 564.0
custom_constants/separation = 100

[node name="HB_TopRow" type="HBoxContainer" parent="M/VB"]
margin_left = 48.0
margin_right = 904.0
margin_bottom = 54.0
size_flags_horizontal = 4
custom_constants/separation = 114

[node name="NewGame" type="Button" parent="M/VB/HB_TopRow"]
margin_right = 220.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "New Game"

[node name="BackToGame" type="Button" parent="M/VB/HB_TopRow"]
margin_left = 334.0
margin_right = 594.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Back to Game"

[node name="Quit" type="Button" parent="M/VB/HB_TopRow"]
margin_left = 708.0
margin_right = 856.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Quit"

[node name="GridContainer" type="GridContainer" parent="M/VB"]
margin_left = 47.0
margin_top = 154.0
margin_right = 904.0
margin_bottom = 356.0
size_flags_horizontal = 4
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Load_1" type="Button" parent="M/VB/GridContainer"]
margin_right = 157.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
enabled_focus_mode = 0
text = "Load"

[node name="Info_1" type="Label" parent="M/VB/GridContainer"]
margin_left = 177.0
margin_right = 607.0
margin_bottom = 54.0
rect_min_size = Vector2( 430, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = "2021 - 05 - 15  |  14 : 33  |  1234567890"
align = 1
valign = 1

[node name="Save_1" type="Button" parent="M/VB/GridContainer"]
margin_left = 627.0
margin_right = 783.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Save"

[node name="VSep_1" type="VSeparator" parent="M/VB/GridContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 803.0
margin_right = 813.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="Delete_1" type="TextureButton" parent="M/VB/GridContainer"]
margin_left = 833.0
margin_top = 15.0
margin_right = 857.0
margin_bottom = 39.0
focus_mode = 0
size_flags_vertical = 4
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )

[node name="Load_2" type="Button" parent="M/VB/GridContainer"]
margin_top = 74.0
margin_right = 157.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
enabled_focus_mode = 0
text = "Load"

[node name="Info_2" type="Label" parent="M/VB/GridContainer"]
margin_left = 177.0
margin_top = 74.0
margin_right = 607.0
margin_bottom = 128.0
rect_min_size = Vector2( 430, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = "---"
align = 1
valign = 1

[node name="Save_2" type="Button" parent="M/VB/GridContainer"]
margin_left = 627.0
margin_top = 74.0
margin_right = 783.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Save"

[node name="VSep_2" type="VSeparator" parent="M/VB/GridContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 803.0
margin_top = 74.0
margin_right = 813.0
margin_bottom = 128.0
custom_constants/separation = 10

[node name="Delete_2" type="TextureButton" parent="M/VB/GridContainer"]
margin_left = 833.0
margin_top = 89.0
margin_right = 857.0
margin_bottom = 113.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )

[node name="Load_3" type="Button" parent="M/VB/GridContainer"]
margin_top = 148.0
margin_right = 157.0
margin_bottom = 202.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
enabled_focus_mode = 0
text = "Load"

[node name="Info_3" type="Label" parent="M/VB/GridContainer"]
margin_left = 177.0
margin_top = 148.0
margin_right = 607.0
margin_bottom = 202.0
rect_min_size = Vector2( 430, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = "---"
align = 1
valign = 1

[node name="Save_3" type="Button" parent="M/VB/GridContainer"]
margin_left = 627.0
margin_top = 148.0
margin_right = 783.0
margin_bottom = 202.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Save"

[node name="VSep_3" type="VSeparator" parent="M/VB/GridContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 803.0
margin_top = 148.0
margin_right = 813.0
margin_bottom = 202.0
custom_constants/separation = 10

[node name="Delete_3" type="TextureButton" parent="M/VB/GridContainer"]
margin_left = 833.0
margin_top = 163.0
margin_right = 857.0
margin_bottom = 187.0
rect_clip_content = true
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )

[node name="HB_BottomRow" type="HBoxContainer" parent="M/VB"]
margin_left = 47.0
margin_top = 456.0
margin_right = 904.0
margin_bottom = 510.0
size_flags_horizontal = 4
custom_constants/separation = 191

[node name="SwitchLanguage" type="Button" parent="M/VB/HB_BottomRow"]
margin_right = 306.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Language (de/en)"

[node name="Fullscreen" type="Button" parent="M/VB/HB_BottomRow"]
margin_left = 497.0
margin_right = 857.0
margin_bottom = 54.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.752941 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Fullscreen / Windowed"

[node name="Label" type="Label" parent="."]
margin_left = 155.0
margin_top = 568.0
margin_right = 445.0
margin_bottom = 584.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
text = "Restart required / Neustart erforderlich"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="M/VB/HB_TopRow/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="M/VB/HB_TopRow/BackToGame" to="." method="_on_BackToGame_pressed"]
[connection signal="pressed" from="M/VB/HB_TopRow/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Load_1" to="." method="_on_Load_1_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Save_1" to="." method="_on_Save_1_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Delete_1" to="." method="_on_Delete_1_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Load_2" to="." method="_on_Load_2_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Save_2" to="." method="_on_Save_2_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Delete_2" to="." method="_on_Delete_2_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Load_3" to="." method="_on_Load_3_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Save_3" to="." method="_on_Save_3_pressed"]
[connection signal="pressed" from="M/VB/GridContainer/Delete_3" to="." method="_on_Delete_3_pressed"]
[connection signal="pressed" from="M/VB/HB_BottomRow/SwitchLanguage" to="." method="_on_SwitchLanguage_pressed"]
[connection signal="pressed" from="M/VB/HB_BottomRow/Fullscreen" to="." method="_on_Fullscreen_pressed"]
